Add structure for home page

--- a/fight-glove.html
+++ b/fight-glove.html
@@ -2,13 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Unleash Your Inner Champion with Fight Glove's Free Boxing Classes.">
+    <meta name="keywords" content="unleash, inner champion, fight glove, free, boxing classes">
+    
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Fight Glove</title>
 </head>
 <body>
-    <h1>Fight Glove</h1>
-    <h2>Why boxing with Fight Glove?</h2>
-    <p>Fight Glove offers free beginner classes for you who are interested in boxing. The only thing needed is a pair of gloves and your willpower.</p>
-</body>
+    <header>
+        <section>
+            Hero image
+        </section>
+        <section>
+            Why boxing with Fight Glove
+        </section>
+        <footer>
+            Social media
+        </footer>
+    </header>
+    <p>Ready to unleash your full potential and become a champion? Join Fight Glove's Free Boxing Classes today!</p>
+    </body>
 </html>
