Add header structure

--- a/fight-glove.html
+++ b/fight-glove.html
@@ -1,26 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Unleash Your Inner Champion with Fight Glove's Free Boxing Classes.">
     <meta name="keywords" content="unleash, inner champion, fight glove, free, boxing classes">
-    
+
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Fight Glove</title>
 </head>
+
 <body>
     <header>
-        <section>
-            Hero image
-        </section>
-        <section>
-            Why boxing with Fight Glove
-        </section>
-        <footer>
-            Social media
-        </footer>
+        <a href="fight-glove.html">
+            <h1>FIGHT GLOVE</h1>
+        </a>
+        <nav>
+            <ul>
+                <li>
+                    <a href="fight-glove.html">HUB</a>
+                </li>
+                <li>
+                    <a href="#">BOXING</a>
+                </li>
+                <li>
+                    <a href="#">JOIN</a>
+                </li>
+            </ul>
+        </nav>
     </header>
-    <p>Ready to unleash your full potential and become a champion? Join Fight Glove's Free Boxing Classes today!</p>
-    </body>
+    <section>
+        Hero image
+    </section>
+    <section>
+        Why boxing with Fight Glove
+    </section>
+    <section>
+        Time and Place
+    </section>
+    <footer>
+        Social media
+    </footer>
+</body>
+
 </html>
