--- a/fight-glove.html
+++ b/fight-glove.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <a href="fight-glove.html">
-            <h1>FIGHT GLOVE</h1>
+            <h1 id="logo">FIGHT GLOVE</h1>
         </a>
         <nav>
             <ul>
