add style to navigation

--- a/fight-glove.html
+++ b/fight-glove.html
@@ -17,15 +17,15 @@
             <h1 id="logo">FIGHT GLOVE</h1>
         </a>
         <nav>
-            <ul>
+            <ul id="menu">
                 <li>
-                    <a href="fight-glove.html">HUB</a>
+                    <a href="#">JOIN</a>
                 </li>
                 <li>
                     <a href="#">BOXING</a>
                 </li>
                 <li>
-                    <a href="#">JOIN</a>
+                    <a href="fight-glove.html">HUB</a>
                 </li>
             </ul>
         </nav>
