style navigation links

--- a/fight-glove.html
+++ b/fight-glove.html
@@ -25,7 +25,7 @@
                     <a href="#">BOXING</a>
                 </li>
                 <li>
-                    <a href="fight-glove.html">HUB</a>
+                    <a href="fight-glove.html" class="active">HUB</a>
                 </li>
             </ul>
         </nav>
