--- a/fight-glove.html
+++ b/fight-glove.html
@@ -31,7 +31,7 @@
         </nav>
     </header>
     <section>
-        Hero image
+        <div id="fight-glove"></div>
     </section>
     <section>
         Why boxing with Fight Glove
