add fight-glove image to header and zoom animation

--- a/fight-glove.html
+++ b/fight-glove.html
@@ -30,7 +30,7 @@
             </ul>
         </nav>
     </header>
-    <section>
+    <section id="fight-glove-outer">
         <div id="fight-glove"></div>
     </section>
     <section>
