--- a/fight-glove.html
+++ b/fight-glove.html
@@ -32,6 +32,8 @@
     </header>
     <section id="fight-glove-outer">
         <div id="fight-glove"></div>
+        <div id="cover-text">
+            <h2>Unleash your inner fighter today</h2>
     </section>
     <section>
         Why boxing with Fight Glove
