add fight glove text and social links

--- a/fight-glove.html
+++ b/fight-glove.html
@@ -35,15 +35,34 @@
         <div id="cover-text">
             <h2>Unleash your inner fighter today</h2>
     </section>
-    <section>
-        Why boxing with Fight Glove
-    </section>
-    <section>
-        Time and Place
+    <section id="why-fightglove">
+            <div id="fightglove"></div>
+            <div id="fightglove-text">
+            <h2>Why boxing with Fight Glove?</h2>
+            <div> 
+                <p class="left">Unleash your boxing potential with Fight Glove's exceptional training program led by experienced coaches, modern facilities, and an encouraging community, designed to help you achieve your goals and become the champion you were meant to be.</p>
+                <p class="right">Start your boxing journey with Fight Glove today! Enjoy our free beginner classes and continue your progress with our affordable monthly membership fee of just 19.99 euro.</p>
+            </div>
     </section>
     <footer>
-        Social media
+        <ul class="social-networks">
+            <li>
+                <a href="https://facebook.com" target="_blank" rel="noopener" 
+                    aria-label="visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://instagram.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in a new tab)"><i class="fab fa-instagram"></i></a>
+            </li>
+                        <li>
+                <a href="https://youtube.com" target="_blank" rel="noopener"
+                    aria-label="Visit our YouTube page (opens in a new tab)"><i class="fab fa-youtube-square"></i></a>
+            </li>
+        </ul>
     </footer>
+
+     <!-- font awesome script -->
+     <script src="https://kit.fontawesome.com/c7dbda0798.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
