--- a/fight-glove.html
+++ b/fight-glove.html
@@ -19,7 +19,7 @@
         <nav>
             <ul id="menu">
                 <li>
-                    <a href="#">JOIN</a>
+                    <a href="join.html">JOIN</a>
                 </li>
                 <li>
                     <a href="boxing.html">BOXING</a>
