--- a/join.html
+++ b/join.html
@@ -19,10 +19,10 @@
         <nav>
             <ul id="menu">
                 <li>
-                    <a href="join.html">JOIN</a>
+                    <a href="join.html" class="active">JOIN</a>
                 </li>
                 <li>
-                    <a href="boxing.html" class="active">BOXING</a>
+                    <a href="boxing.html">BOXING</a>
                 </li>
                 <li>
                     <a href="fight-glove.html">HUB</a>
@@ -32,7 +32,7 @@
     </header>
     
     <section></section>
-
+    
     <footer>
         <ul class="social-networks">
             <li>
