add image and review in boxing.html

--- a/boxing.html
+++ b/boxing.html
@@ -30,9 +30,46 @@
             </ul>
         </nav>
     </header>
-    
-    <section></section>
-
+    <section id="boxing-outer">
+        <div id="boxing"></div>
+    </section>
+    <section id="reviews">
+        <div>
+            <h2>R.USS</h2>
+            <h3>TOP 5 REVIEW</h3>
+            <h4>"I absolutely love Fight Glove Boxing Club - the workouts are intense, the trainers are knowledgeable, and the community is supportive. I can't imagine going anywhere else to get fit!"</h4>
+            <h5>10:23:25 PM</h5>
+            <h5>05.02.2023</h5>
+        </div>
+        <div>
+            <h2>A.NYA</h2>
+            <h3>TOP 5 REVIEW</h3>
+            <h4>"Fight Glove Boxing Club is the best decision I've made for my fitness journey. The classes are challenging but fun, and the trainers are top-notch. I've never felt stronger or more confident!"</h4>
+            <h5>09:11:45 AM</h5>
+            <h5>30.01.2023</h5>
+        </div>
+        <div>
+            <h2>W.ADE</h2>
+            <h3>TOP 5 REVIEW</h3>
+            <h4>"If you want to get in shape and have a great time doing it, Fight Glove Boxing Club is the place to be. The coaches are motivating, the workouts are intense, and the community is welcoming. I'm hooked!"</h4>
+            <h5>03:12:05 PM</h5>
+            <h5>09.01.2023</h5>
+        </div>
+        <div>
+            <h2>E.RIN</h2>
+            <h3>TOP 5 REVIEW</h3>
+            <h4>"Fight Glove Boxing Club is the ultimate workout destination in town. With dedicated trainers and a high-energy environment, it's the perfect place to reach your fitness goals. Highly recommended!"</h4>
+            <h5>05:34:09 PM</h5>
+            <h5>22.12.2022</h5>
+        </div>
+        <div>
+            <h2>R.YAN</h2>
+            <h3>TOP 5 REVIEW</h3>
+            <h4>"Fight Glove Boxing Club has transformed my body and mind with its powerful combination of boxing and cardio. The passionate trainers and positive atmosphere have been life-changing for me." </h4>
+            <h5>01:52:07 PM</h5>
+            <h5>25.11.2022</h5>
+        </div>
+    </section>
     <footer>
         <ul class="social-networks">
             <li>
