add cover text and styling boxing.html

--- a/boxing.html
+++ b/boxing.html
@@ -32,7 +32,23 @@
     </header>
     <section id="boxing-outer">
         <div id="boxing"></div>
-    </section>
+        <div id="cover-text2">
+            <h2>the ultimate workout destination for anyone looking to get in shape and have fun doing it. We're excited to offer new members the opportunity to try our classes for free during their first month. After that, we offer a competitive monthly fee of only $19.99. Our passionate trainers are dedicated to helping you reach your fitness goals, and our high-energy environment is designed to keep you motivated from start to finish. Join our welcoming community of fitness enthusiasts and transform your body and mind with our powerful combination of boxing and cardio. Don't wait - become a part of the Fight Glove family!<h2></div>
+        <div class="cover-text3">
+            <h1>Welcome to Fight Glove Boxing Club</h1>
+            <h2>Join us for a great workout and become a part of our supportive and motivating community.</h2>
+            <p>Our open hours are:</p>
+                <ul>
+                  <li>Monday: 6am-9pm</li>
+                  <li>Tuesday: 6am-9pm</li>
+                  <li>Wednesday: 6am-9pm</li>
+                  <li>Thursday: 6am-9pm</li>
+                  <li>Friday: 6am-8pm</li>
+                  <li>Saturday: 8am-5pm</li>
+                  <li>Sunday: 10am-3pm</li>
+                </ul>
+        </div>   
+     </section>
     <section id="reviews">
         <div>
             <h2>R.USS</h2>
