--- a/fight-glove.html
+++ b/fight-glove.html
@@ -41,7 +41,7 @@
             <h2>Why boxing with Fight Glove?</h2>
             <div> 
                 <p class="left">UNLEASH YOUR BOXING POTENTIAL WITH FIGHT GLOVE'S EXCEPTIONAL TRAINING PROGRAM LED BY EXPERIENCED COACHES, MODERN FACILITIES, AND AN ENCOURAGING COMMUNITY, DESIGNED TO HELP YOU ACHIEVE YOUR GOALS AND BECOME THE CHAMPION YOU WERE MEANT TO BE.</p>
-                <p class="right">START YOUR BOXING JOURNEY WITH FIGHT GLOVE TODAY! ENJOY OUR FREE BEGINNER CLASSES AND CONTINUE YOUR PROGRESS WITH OUR AFFORDABLE MONTHLY MEMBERSHIP FEE OF JUST 19.99 EURO.</p>
+                <p class="right">START YOUR BOXING JOURNEY WITH FIGHT GLOVE TODAY! ENJOY OUR FREE BEGINNER CLASSES AND CONTINUE YOUR PROGRESS WITH OUR AFFORDABLE MONTHLY MEMBERSHIP FEE OF JUST $19.99.</p>
             </div>
     </section>
     <footer>
