changed fight-glove.html to index.html

--- a/join.html
+++ b/join.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <a href="fight-glove.html">
+        <a href="index.html">
             <h1 id="logo">FIGHT GLOVE</h1>
         </a>
         <nav>
@@ -25,7 +25,7 @@
                     <a href="boxing.html">BOXING</a>
                 </li>
                 <li>
-                    <a href="fight-glove.html">HUB</a>
+                    <a href="index.html">HUB</a>
                 </li>
             </ul>
         </nav>
