add sign up form page and styling

--- a/join.html
+++ b/join.html
@@ -30,9 +30,18 @@
             </ul>
         </nav>
     </header>
-    
-    <section></section>
-    
+    <section id="signup-outer">
+        <div id="signup">
+            <div class="container">
+                <form>
+                    <h1>Sign Up for Fight Glove</h1>
+                    <p>Enter your email to get started:</p>
+                    <input type="email" placeholder="Email" required>
+                    <button type="submit">Sign Up</button> 
+                </form>
+            </div>
+        </div>
+    </section>
     <footer>
         <ul class="social-networks">
             <li>
